--- a/src/index.css
+++ b/src/index.css
@@ -143,7 +143,7 @@ body.dark .header-logo-box img{
     justify-content: space-between;
     position: fixed;
     z-index:20;
-    width: 20%;
+    width: 146px;
     max-width: 146px;
     padding-right: 1em;
     height: 80px;
@@ -172,17 +172,18 @@ body.dark .header-logo-box img{
 }
 
 .header-main .header-container .header-symbol-box {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     width: auto;
     padding-left: 0.5em;
-    height: 50px;
     border-radius: 0 0 0 26px;
     margin-left: 11px;
     right: 10px;
     position: fixed;
     z-index:20
+}
+.header-main .header-container .header-symbol-box .trio-symbol {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 @media screen and (min-width: 768px) {
     .header-main .header-container .header-symbol-box{
@@ -394,13 +395,30 @@ body:has(.ProjectH:hover, .videocursor:hover) .cursor {
     overflow: hidden;
     mix-blend-mode: normal;
 }
-
+@media screen and (max-width: 740px) {
+    body:has(.ProjectH:hover, .videocursor:hover) .cursor {
+        width: 166px;
+        height: 360px;
+        border-radius: 30px;
+        overflow: hidden;
+        mix-blend-mode: normal;
+    }
+}
 body:has(.ProjectN:hover, .videocursorr:hover) .cursor {
     width: 534px;
     height: 265px;
     border-radius: 20px;
     overflow: hidden;
     mix-blend-mode: normal;
+}
+@media screen and (max-width: 740px) {
+    body:has(.ProjectN:hover, .videocursorr:hover) .cursor {
+        width: 356px;
+        height: 176px;
+        border-radius: 30px;
+        overflow: hidden;
+        mix-blend-mode: normal;
+    }
 }
 
 body:has(.ProjectP:hover, .videocursorrr:hover) .cursor {
@@ -409,6 +427,15 @@ body:has(.ProjectP:hover, .videocursorrr:hover) .cursor {
     border-radius: 20px;
     overflow: hidden;
     mix-blend-mode: normal;
+}
+@media screen and (max-width: 740px) {
+    body:has(.ProjectP:hover, .videocursorrr:hover) .cursor {
+        width: 333px;
+        height: 166px;
+        border-radius: 30px;
+        overflow: hidden;
+        mix-blend-mode: normal;
+    }
 }
 
 body:has(.ProjectH:hover, .videocursor:hover) .videocursor {
