--- a/src/index.css
+++ b/src/index.css
@@ -277,19 +277,27 @@ shader-art {
 
 .hero {
     margin-top: 10px;
-    min-height: 630px;
-    height:100vh;
+    min-height: 530px;
     position: relative;
     width: 100%;
+    height: 76vh;
     border-radius: 30px;
     max-width: 100%;
     padding: 0 20px;
+    overflow: hidden;
+}
+@media screen and (min-width: 640px) {
+    .hero {
+        height: 100vh;
+        /*height:98.935vh;*/
+    }
 }
 @media screen and (min-width: 768px) {
     .hero {
         padding: 0 40px
     }
 }
+
 
 .hero .gradient-container {
     overflow: hidden;
@@ -302,9 +310,11 @@ shader-art {
 
 .hero .gradient-container canvas {
     width: 100% !important;
-    height: 1050px !important;
+    height: 100vh !important;
+    max-height: 1300px;
     border-radius:30px
 }
+
 
 .infocenter{
     text-align: center;
